libshare-ui (1.1.29.1) unstable; urgency=low

  * Fixes: NB#266794 - missing introductory api documentation for libmdatauri

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Mon, 18 Jul 2011 12:13:07 +0300

libshare-ui (1.1.24.1) unstable; urgency=low

  * Fixes: NB#270945 - Empty share UI is launched when trying to share attached picture

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 16 Jun 2011 11:16:01 +0530

libshare-ui (1.1.23.1) unstable; urgency=low

  * Fixes for handling percent encoding

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Wed, 08 Jun 2011 14:48:27 +0300

libshare-ui (0.3.23.1) unstable; urgency=low

  * Removing default methods plugin from libshare-ui package 

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Mon, 30 May 2011 14:03:04 +0300

libshare-ui (0.3.21.3) unstable; urgency=low

  * Fixes: NB#259684 - ShareUI crash when account is created and there are multiple share-uis

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Wed, 25 May 2011 17:04:32 +0300

libshare-ui (0.3.21.2) unstable; urgency=low

  * Unit test fix

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 24 May 2011 15:03:01 +0300

libshare-ui (0.3.21.1) unstable; urgency=low

  * Will not use com.meego.email method anymore

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Mon, 23 May 2011 15:57:36 +0300

libshare-ui (0.3.20.4) unstable; urgency=low

  * Clean up source headers

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Fri, 20 May 2011 14:01:44 +0300

libshare-ui (0.3.20.3) unstable; urgency=low

  * Fixes: NB#249654 - Bluetooth is not launched from Shareui main view when try to Share a contact card with symbol \

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 19 May 2011 15:25:13 +0530

libshare-ui (0.3.20.2) unstable; urgency=low

  * Use invoker only in nokia version of service file

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Wed, 18 May 2011 16:23:30 +0530

libshare-ui (0.3.20.1) unstable; urgency=low
